--- a/package.json
+++ b/package.json
@@ -1,24 +1,25 @@
 {
-  "name": "unified-trading-helper-bot",
+  "name": "unified-trading-bot",
   "version": "1.0.0",
-  "description": "A unified Telegram bot for whale alerts, trend confirmation, liquidity zones, and TP/SL optimization.",
+  "description": "A unified Telegram bot for whale alerts, liquidity zones, trend confirmation, and trading signals",
   "main": "bot.js",
   "scripts": {
     "start": "node bot.js"
   },
   "keywords": [
-    "telegram-bot",
+    "telegram",
+    "bot",
     "crypto",
-    "whale-tracking",
-    "trend-analysis",
-    "liquidity-zones",
-    "tp-sl-optimization"
+    "whale",
+    "trend",
+    "liquidity",
+    "order-blocks"
   ],
-  "author": "Ronaldo the Wise",
-  "license": "ISC",
+  "author": "Ronaldo",
+  "license": "MIT",
   "dependencies": {
     "axios": "^1.6.8",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.4.5",
     "telegraf": "^4.16.2"
   }
 }
