--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
-  "name": "trend-intelligence-bot",
+  "name": "trading-helper-bot",
   "version": "1.0.0",
-  "description": "Crypto trend analyzer bot for Telegram - by Mr Ronaldo",
+  "description": "Telegram bot for trend analysis, liquidity zones, and TP/SL recommendations.",
   "main": "bot.js",
   "scripts": {
     "start": "node bot.js"
   },
   "dependencies": {
-    "axios": "^1.6.7",
-    "dotenv": "^16.4.5",
-    "telegraf": "^4.12.3"
+    "axios": "^1.5.0",
+    "dotenv": "^16.3.1",
+    "telegraf": "^4.12.3",
+    "technicalindicators": "^4.1.4"
   },
-  "author": "Mr Ronaldo",
-  "license": "ISC"
+  "engines": {
+    "node": ">=18"
+  }
 }
