--- a/package.json
+++ b/package.json
@@ -1,18 +1,16 @@
 {
-  "name": "trading-helper-bot",
+  "name": "crypto-analysis-bot",
   "version": "1.0.0",
-  "description": "Telegram bot for trend analysis, liquidity zones, and TP/SL recommendations.",
+  "description": "Telegram bot for crypto trend confirmation and indicator analysis",
   "main": "bot.js",
   "scripts": {
     "start": "node bot.js"
   },
   "dependencies": {
-    "axios": "^1.5.0",
+    "axios": "^1.6.8",
     "dotenv": "^16.3.1",
-    "telegraf": "^4.12.3",
-    "technicalindicators": "^4.1.4"
-  },
-  "engines": {
-    "node": ">=18"
+    "express": "^4.19.2",
+    "node-telegram-bot-api": "^0.61.0",
+    "technicalindicators": "^4.0.3"  // ✅ fixed version
   }
 }
