--- a/package.json
+++ b/package.json
@@ -11,6 +11,6 @@
     "dotenv": "^16.3.1",
     "express": "^4.19.2",
     "node-telegram-bot-api": "^0.61.0",
-    "technicalindicators": "^4.0.3"  // ✅ fixed version
+    "technicalindicators": "^4.0.3"
   }
 }
