--- a/.env
+++ b/.env
@@ -1,3 +1,1 @@
-BOT_TOKEN=7655482876:AAHxMKFBC7FZ22vvB28RdYFIZKL3eTI08b0
-CHAT_ID=7538764539
-ETHERSCAN_API_KEY=JVUHN9KS9AZZGMV6H13KFVKR5A117FPQNC
+TELEGRAM_BOT_TOKEN=7655482876:AAHxMKFBC7FZ22vvB28RdYFIZKL3eTI08b0
