--- a/package.json
+++ b/package.json
@@ -10,5 +10,9 @@
     "axios": "^1.6.8",
     "node-telegram-bot-api": "^0.61.0",
     "technicalindicators": "^3.0.2"
-  }
+  },
+  "engines": {
+    "node": ">=16.0.0"
+  },
+  "port": 3000
 }
