--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
-  "name": "crypto-signal-bot",
+  "name": "ronaldo-signal-bot",
   "version": "1.0.0",
-  "description": "Telegram bot to fetch Binance indicators and trend signals",
+  "description": "Telegram bot for crypto signal tracking with Binance API",
   "main": "bot.js",
   "scripts": {
     "start": "node bot.js"
   },
+  "keywords": ["telegram", "bot", "binance", "crypto", "signal", "ronaldo"],
+  "author": "Mr Ronaldo",
+  "license": "MIT",
   "dependencies": {
     "axios": "^1.6.8",
-    "node-telegram-bot-api": "^0.61.0",
-    "technicalindicators": "^3.0.2"
+    "node-telegram-bot-api": "^0.61.0"
   },
   "engines": {
-    "node": ">=16.0.0"
+    "node": ">=16"
   },
   "port": 3000
 }
