--- a/package.json
+++ b/package.json
@@ -1,20 +1,23 @@
 {
-  "name": "ronaldo-signal-bot",
+  "name": "trendbot",
   "version": "1.0.0",
-  "description": "Telegram bot for crypto signal tracking with Binance API",
+  "description": "Crypto Trend Confirmation Telegram Bot",
   "main": "bot.js",
   "scripts": {
     "start": "node bot.js"
   },
-  "keywords": ["telegram", "bot", "binance", "crypto", "signal", "ronaldo"],
-  "author": "Mr Ronaldo",
-  "license": "MIT",
   "dependencies": {
-    "axios": "^1.6.8",
+    "axios": "^1.7.2",
     "node-telegram-bot-api": "^0.61.0"
   },
-  "engines": {
-    "node": ">=16"
-  },
-  "port": 3000
+  "keywords": [
+    "telegram",
+    "bot",
+    "crypto",
+    "trend",
+    "binance",
+    "technical-analysis"
+  ],
+  "author": "Mr Ronaldo",
+  "license": "MIT"
 }
