--- a/package.json
+++ b/package.json
@@ -1,23 +1,15 @@
 {
-  "name": "trendbot",
+  "name": "telegram-bot-webhook",
   "version": "1.0.0",
-  "description": "Crypto Trend Confirmation Telegram Bot",
+  "description": "Crypto trend Telegram bot with webhook support",
   "main": "bot.js",
   "scripts": {
     "start": "node bot.js"
   },
   "dependencies": {
-    "axios": "^1.7.2",
+    "axios": "^1.6.0",
+    "body-parser": "^1.20.2",
+    "express": "^4.18.2",
     "node-telegram-bot-api": "^0.61.0"
-  },
-  "keywords": [
-    "telegram",
-    "bot",
-    "crypto",
-    "trend",
-    "binance",
-    "technical-analysis"
-  ],
-  "author": "Mr Ronaldo",
-  "license": "MIT"
+  }
 }
