--- a/package.json
+++ b/package.json
@@ -1,23 +1,16 @@
 {
   "name": "crypto-trend-bot",
   "version": "1.0.0",
-  "description": "Telegram bot that fetches Binance crypto data and displays technical trend summaries.",
+  "description": "Telegram bot to fetch Binance crypto data and display technical trends dynamically.",
   "main": "bot.js",
   "scripts": {
     "start": "node bot.js"
   },
   "dependencies": {
     "axios": "^1.6.0",
-    "node-telegram-bot-api": "^0.61.0",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "node-telegram-bot-api": "^0.61.0"
   },
-  "keywords": [
-    "telegram",
-    "crypto",
-    "binance",
-    "trend-analysis",
-    "trading-bot"
-  ],
   "author": "Mr Ronaldo",
   "license": "MIT"
 }
