--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "crypto-trend-bot",
   "version": "1.0.0",
-  "description": "Telegram bot to fetch Binance crypto data and display technical trends dynamically.",
+  "description": "Telegram bot fetching Binance indicators and providing trend analysis",
   "main": "bot.js",
   "scripts": {
     "start": "node bot.js"
   },
   "dependencies": {
-    "axios": "^1.6.0",
+    "axios": "^1.5.0",
+    "telegraf": "^4.12.2",
+    "technicalindicators": "^4.3.1",
     "express": "^4.18.2",
-    "node-telegram-bot-api": "^0.61.0"
-  },
-  "author": "Mr Ronaldo",
-  "license": "MIT"
+    "cors": "^2.8.5"
+  }
 }
