--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "telegraf": "^4.12.2",
     "technicalindicators": "^3.0.6",
     "express": "^4.18.2",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.0"
   }
 }
