--- a/package.json
+++ b/package.json
@@ -1,17 +1,15 @@
 {
-  "name": "crypto-trend-bot",
+  "name": "crypto-bot-eth-bnb",
   "version": "1.0.0",
-  "description": "Telegram bot fetching Binance indicators and providing trend analysis",
+  "description": "Crypto Trend Signal Bot with Indicators and Fear & Greed Index",
   "main": "bot.js",
   "scripts": {
     "start": "node bot.js"
   },
   "dependencies": {
-    "axios": "^1.5.0",
-    "telegraf": "^4.12.2",
-    "technicalindicators": "^3.0.6",
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.0"
+    "axios": "^1.6.8",
+    "dotenv": "^16.3.1",
+    "node-telegram-bot-api": "^0.61.0",
+    "technicalindicators": "^3.1.0"
   }
 }
